# biblio

./: .gitignore  alembic.ini  api.py  pyproject.toml  raven.py
alembic/versions/: 2377133ddef3_create_books_table.py
api/api/: settings.py
biblio/api/: admin.py  urls.py
biblio/api/migrations/: 0001_initial.py
biblio/web/: settings.py  urls.py
database/: __init__.py  crud.py  db.py  models.py  schemas.py  setup.py
handler/: walter.py
schemas/: book.py
web/api/: models.py  settings.py
