[tool.poetry]
name = "biblio"
version = "0.1.0"
description = ""
authors = ["Shawon Ashraf"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
